--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "ipykernel>=6.30.1",
+    "manim>=0.19.0",
     "matplotlib>=3.10.5",
     "numpy>=2.3.2",
 ]
